src/objects/UL_Cannibalisation_Rate__c.object
<CustomObject>
    <fields>
        <fullName>UL_Cannibalisation_Rate__c</fullName>
        <description>Allows for entry of a cannibalisation rate.</description>
        <inlineHelpText>Allows for entry of a cannibalisation rate.</inlineHelpText>
        <label>Cannibalisation Rate (%)</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UL_Customer_ID__c</fullName>
        <formula>UL_Planning_Level__r.UL_Customer__r.Id</formula>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UL_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows for entry of a customer for which to apply the rate.</description>
        <inlineHelpText>Allows for entry of a customer for which to apply the rate.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cannibalisation Rates</relationshipLabel>
        <relationshipName>Cannibalisation_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UL_Feature__c</fullName>
        <description>Allows for entry of a feature.</description>
        <inlineHelpText>Allows for entry of a feature.</inlineHelpText>
        <label>Feature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UL_Planning_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planning Level</label>
        <referenceTo>UL_Planning_Level__c</referenceTo>
        <relationshipLabel>Cannibalisation Rates</relationshipLabel>
        <relationshipName>Cannibalisation_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UL_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows for entry of a product for which to apply the rate.</description>
        <inlineHelpText>Allows for entry of a product for which to apply the rate.</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ACSFUL001__Product__c.ACSFUL001__Product_Level__c</field>
                <operation>equals</operation>
                <value>Product Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACSFUL001__Product__c</referenceTo>
        <relationshipLabel>Cannibalisation Rates</relationshipLabel>
        <relationshipName>Cannibalisation_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UL_Sales_Organization__c</fullName>
        <globalPicklist>ACSFUL001__Sales_Org</globalPicklist>
        <label>Sales Organization</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UL_Valid_From__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Enter the start date for the cannibalisation rate.</description>
        <inlineHelpText>Enter the start date for the cannibalisation rate.</inlineHelpText>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UL_Valid_Thru__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Enter the end date for the cannibalisation rate.</description>
        <inlineHelpText>Enter the end date for the cannibalisation rate.</inlineHelpText>
        <label>Valid Thru</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Cannibalisation Rate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UL_Cannibalisation_Rate__c</columns>
        <columns>UL_Customer__c</columns>
        <columns>UL_Feature__c</columns>
        <columns>UL_Product__c</columns>
        <columns>UL_Valid_From__c</columns>
        <columns>UL_Valid_Thru__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Cannibalisation Rate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cannibalisation Rates</pluralLabel>
    <recordTypes>
        <fullName>UL_SoCo</fullName>
        <active>false</active>
        <label>SoCo</label>
    </recordTypes>
    <recordTypes>
        <fullName>UL_UKI</fullName>
        <active>true</active>
        <label>UKI</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>UL_Valid_From_Less_Than_Valid_Thru</fullName>
        <active>true</active>
        <errorConditionFormula>UL_Valid_From__c &gt; UL_Valid_Thru__c</errorConditionFormula>
        <errorDisplayField>UL_Valid_Thru__c</errorDisplayField>
        <errorMessage>Valid From Thru Date cannot be less than Valid From Date</errorMessage>
    </validationRules>
</CustomObject>